Update LessonsGetter.java